[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-databases"
dynamic = ["description", "version"]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

license = {text = "mit"}
readme = "README.md"

requires-python = ">=3.7"

[project.urls]
"Bug Tracker" = "https://github.com/SimpleArt/easy-databases/issues"
"Documentation" = "https://simpleart.github.io/easy-databases/"
"Homepage" = "https://simpleart.github.io/easy-databases/"
"Repository" = "https://github.com/SimpleArt/easy-databases"

[tool.setuptools.dynamic]
version = {attr = "easy.databases.__version__"}
